force-app/main/default/objects/NF_Form__c/NF_Form__c.object-meta.xml
<CustomObject>
    <description>Stable business identity for a TwinaForms form.</description>
    <label>NF Form</label>
    <nameField>
        <displayFormat>FORM-{0000}</displayFormat>
        <label>Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NF Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>