force-app/main/default/objects/NF_Form__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional business owner separate from the Salesforce record owner.</description>
    <inlineHelpText>Optional business owner.</inlineHelpText>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>NF Forms Business Owner</relationshipLabel>
    <relationshipName>NFFormsBusinessOwner</relationshipName>
    <type>Lookup</type>
</CustomField>