force-app/main/default/objects/NF_Form__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Optional category or grouping value for the form.</description>
    <inlineHelpText>Optional form category.</inlineHelpText>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>