force-app/main/default/objects/NF_Form__c/fields/Current_Draft_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Draft_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current draft version for the form.</description>
    <inlineHelpText>Points to the version currently being edited.</inlineHelpText>
    <label>Current Draft Version</label>
    <referenceTo>NF_Form_Version__c</referenceTo>
    <relationshipLabel>Forms as Current Draft</relationshipLabel>
    <relationshipName>FormsAsCurrentDraft</relationshipName>
    <type>Lookup</type>
</CustomField>