force-app/main/default/objects/NF_Form__c/fields/Current_Published_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_Published_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current published version for the form.</description>
    <inlineHelpText>Points to the live published version.</inlineHelpText>
    <label>Current Published Version</label>
    <referenceTo>NF_Form_Version__c</referenceTo>
    <relationshipLabel>Forms as Current Published</relationshipLabel>
    <relationshipName>FormsAsCurrentPublished</relationshipName>
    <type>Lookup</type>
</CustomField>