force-app/main/default/objects/NF_Form__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Internal description or notes about the form.</description>
    <inlineHelpText>Internal description or notes.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>