force-app/main/default/objects/NF_Form__c/fields/Enable_Captcha__c.field-meta.xml
<CustomField>
    <fullName>Enable_Captcha__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, published forms require a CAPTCHA challenge before submit is accepted.</description>
    <inlineHelpText>Require Google reCAPTCHA verification on the published form before submit.</inlineHelpText>
    <label>Enable CAPTCHA</label>
    <type>Checkbox</type>
</CustomField>