force-app/main/default/objects/NF_Form__c/fields/NF_Key__c.field-meta.xml
<CustomField>
    <fullName>NF_Key__c</fullName>
    <description>Unique internal key for the form.</description>
    <inlineHelpText>Stable internal or business key for the form.</inlineHelpText>
    <label>NF Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>