force-app/main/default/objects/NF_Form__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned project for organizing the form in the Designer.</description>
    <label>Project</label>
    <referenceTo>NF_Project__c</referenceTo>
    <relationshipLabel>Project Forms</relationshipLabel>
    <relationshipName>ProjectForms</relationshipName>
    <type>Lookup</type>
</CustomField>