force-app/main/default/objects/NF_Form__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned reusable theme for the form.</description>
    <label>Theme</label>
    <referenceTo>NF_Theme__c</referenceTo>
    <relationshipLabel>Themed Forms</relationshipLabel>
    <relationshipName>ThemedForms</relationshipName>
    <type>Lookup</type>
</CustomField>